--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/http-foundation": "v5.4.0",
         "symfony/monolog-bundle": "^3.0",
         "symfony/routing": "5.1.*",
         "symfony/stopwatch": "5.0.*",
@@ -73,5 +74,8 @@
             "allow-contrib": false,
             "require": "5.0.*"
         }
+    },
+    "require-dev": {
+        "symfony/maker-bundle": "^1.39"
     }
 }
